add: GET, POST のバリデーションチェックを試す
