# docs/common/swagger-prefectures.yaml
@@ -1,6 +1,28 @@
 openapi: 3.0.0
 paths:
   /prefectures:
+    post:
+      operationId: PrefecturesController_create
+      summary: ''
+      description: |-
+        POSTバリデーションの確認用メソッド
+        NOTE: createPrefectureDtoに記載されているリクエストBodyの形式でないとエラーが発生する
+      parameters: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreatePrefectureDto'
+      responses:
+        '201':
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: string
+      tags: &ref_0
+        - prefectures
     get:
       operationId: findAll
       summary: 都道府県リストを取得する
@@ -15,8 +37,7 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Prefecture'
-      tags: &ref_0
-        - prefectures
+      tags: *ref_0
   /prefectures/{id}:
     get:
       operationId: findById
@@ -36,7 +57,7 @@ paths:
           required: true
           in: path
           schema:
-            type: string
+            type: number
       responses:
         '200':
           description: ''
@@ -55,7 +76,7 @@ paths:
           required: true
           in: path
           schema:
-            type: string
+            type: number
       responses:
         '200':
           description: ''
@@ -77,6 +98,16 @@ tags:
 servers: []
 components:
   schemas:
+    CreatePrefectureDto:
+      type: object
+      properties:
+        name:
+          type: string
+        m_area_id:
+          type: number
+      required:
+        - name
+        - m_area_id
     Prefecture:
       type: object
       properties:
