# src/v1/common/prefectures/dto/create-prefecture.dto.ts
@@ -1,0 +1,9 @@
+import { IsString, IsInt } from "class-validator"
+
+export class CreatePrefectureDto {
+    @IsString()
+    name: string
+
+    @IsInt()
+    m_area_id: number
+}
